--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   equatable: ^2.0.5
   json_serializable: ^6.6.1
+  styled_text: ^6.0.0
 
 dev_dependencies:
   flutter_test:
