--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   get_it: ^7.6.0
   dartz: ^0.10.1
   mask_text_input_formatter: ^2.4.0
+  phone_number: ^1.0.0
 
 dev_dependencies:
   flutter_test:
