--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dartz: ^0.10.1
   mask_text_input_formatter: ^2.4.0
   phone_number: ^1.0.0
+  flutter_tawk: ^0.1.0
 
 dev_dependencies:
   flutter_test:
