--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   firebase_auth: ^4.6.3
   dropdown_button2: ^2.1.4
   flutter_tawk: ^0.1.0
+  json_annotation: ^4.8.0
+  dio: ^5.2.1+1
+  retrofit: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +72,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   freezed: ^2.3.3
   build_runner: ^2.3.3
+  retrofit_generator: ^6.0.0+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
