--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   json_annotation: ^4.8.0
   dio: ^5.2.1+1
   retrofit: ^4.0.1
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
